syntax = "proto3";

package app;

service AccountController {
  rpc SignIn (Credentials) returns (AuthMessage);
  rpc SignUp (Credentials) returns (Message);
  rpc IsAuth (AuthMessage) returns (Message);
}

message Credentials {
  string login = 1;
  string password = 2;
  Error error = 3;
}

message AuthMessage {
  string login = 1;
  string token = 2;
  Error error = 3;
}
message Message {
  string message = 1;
  Error error = 2;
}

message Error {
  int32 code = 1;
  string message = 2;
}